fix: add default skin to gameprofiles